# PolygonDisplay

./: CMakeLists.txt  README.md  README_zh
func_main/: FogPoint_func.h  bezier22Edge3_func.h  bezier33Edge4_func.h  calc_func_3D2D.h  circle_func.h  cone_func.h  imgrect_func.h  sphere_func.h  triangle_func_3D2D.h
func_main/equation/: equation2_4_func.h  equation2_func.h  equation3_9_func.h  equation3_func.h  gamma_func.h
polygonClass/: AxisDemo.cpp  AxisDemo.h  Bezier22Edge3.cpp  Bezier22Edge3.h  Bezier33Edge4.cpp  Bezier33Edge4.h  Bezier33Edge4Mirror.cpp  Bezier33Edge4Mirror.h  Bezier3Img.cpp  Bezier3Img.h  CircleDemo.cpp  CircleDemo.h  ConeDemo.cpp  ConeDemo.h  FogDemo.cpp  FogDemo.h  ImgRect.cpp  ImgRect.h  RectDemo.cpp  RectDemo.h  SphereDemo.cpp  SphereDemo.h  TriangleDemo.cpp  TriangleDemo.h
polygonClass/equation/: EquationThree.cpp  EquationThree.h  EquationThree9.cpp  EquationThree9.h  EquationTwo.cpp  EquationTwo.h  EquationTwo4.cpp  EquationTwo4.h  GammaComplex.cpp  GammaComplex.h
polygonClass/source/: PolygonBase.cpp  PolygonBase.h  ScreenDemo.cpp  ScreenDemo.h
polygon_init/: arrow_1.h  axis_1.h  bezier22Edge3_1.h  bezier33Edge4_1.h  circle_1.h  clouds_from.h  cone_1.h  fogPoint_1.h  imgrect_1.h  rect_1.h  screen_1.h  sphere_1.h  triangle_1.h
polygon_init/equation/: equation2_1.h  equation2_4_1.h  equation3_1.h  equation3_9_1.h  gamma_1.h
src/: GlobalSettings.h  main.cpp
